# slm-training

./: .env.example  .gitignore  .mcp.json  .vercelignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  RTK.md  VERCEL.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  skills-lock.json  vercel.json
.agents/skills/: README.md
.claude/: settings.json
.claude/skills/: autotrain  frontier-describe  headroom  hf-cloud-sagemaker-deployment-planner  hf-cloud-serving-image-selection  honest-ship-eval  huggingface-lora-space-builder  improve-openui-harnesses  nemo-rl-auto-research  nemo-rl-session-memory  openui-autoresearch  organize-repository  phase-annotations  phase-bench  phase-checkpoints  phase-experiments  phase-preference  phase-rl  phase-sft  phase-test-data  phase-train-data  running-experiment-matrices  train  train-sentence-transformers
.codex/: config.toml.example  hooks.json  hooks.json.example  serena.config.toml.example
.cursor/: mcp.json
.cursor/rules/: caveman.mdc  headroom.mdc  organize-repository.mdc  rtk.mdc
.cursor/skills/: dashboard-openui-parity  documenting-experiment-results  hf-cloud-aws-context-discovery  hf-cloud-python-env-setup  hf-cloud-sagemaker-iam-preflight  hf-cloud-sagemaker-production-defaults  hf-mem  huggingface-spaces  huggingface-zerogpu  nemo-rl-hf-jobs-etiquette  phase-autoresearch  phase-distill  phase-eval  rtk  synthesis-feedback  trl-training
.githooks/: check-changed  pre-commit
.github/: copilot-instructions.md
.github/hooks/: changed-tests.json  repo-policy.json
.github/workflows/: ci.yml  openwiki-update.yml
.rtk/: filters.toml
.serena/: project.yml
api/: index.py
docs/: MODEL_CARD.md  repository-organization.md
docs/brains/: README.md
docs/design/: abstraction-house-style.md  accel-bench.json  accel-parallel.md  adr-valid-edit-flow-closeout.md  adversarial-review.md  agentv-evaluation.md  agentv-sdk-wiring-results.json  all-consumed-slot-score-results-iter-e320-20260717.json  autoresearch-autotraining.md  autoresearch-researcher-benchmark.json  balanced-slot-owner-results-iter-e323-20260717.json  binding-aware-meaningful-v2.md  binding-consistency-e278-20260717.json  browser-inference-options.md  calculated-arity-adaptive-precision-results.md  calculated-arity-adaptive-precision.md  cap0-02-arity-analyzer-20260718.json  cap0-02-arity-analyzer-20260718.md  cap0-02-arity-analyzer.md  cap0-03-coding-precision-20260718.md  cap0-03-coding-precision.md  cap0-04-arity-certificates.md  cap1-03-task-quotient-20260718.md  cap1-04-conditional-rate-20260718.md  cap1-05-template-sufficiency-20260718.md  cap2-bottleneck-results.json  cap5-artifact-index.json  cap5-artifact-index.md  cap5-claim-ledger.json  cap5-claim-ledger.md  cap5-negative-results.md  checkpoint-bucket.md  checkpoint-provenance.md  checkpoint-reference-backfill-20260717.json  checkpoint-reference-backfill-20260717.md  choice-component-plan-results-iter-e293-20260717.json  choice-connected-close-results-iter-e301-20260717.json  choice-connected-content-results-iter-e300-20260717.json  choice-design-dropout-results-iter-e295-20260717.json  choice-design-dropout-results-iter-e296-20260717.json  (+2109 more)
docs/openwiki/: INSTRUCTIONS.md  quickstart.md  source-map.md
fixtures/: test_seeds.jsonl  train_seeds.jsonl
fixtures/annotations/: .gitkeep
fixtures/autoresearch/: researcher_cases.json  researcher_predictions.jsonl
fixtures/awwwards/: sites.jsonl
fixtures/checkpoints/: README.md
fixtures/deconstruct/: manifest.jsonl  pipeline.jsonl
fixtures/design_md/: default.DESIGN.md
fixtures/evals/: task_scoreboard_smoke.jsonl
fixtures/frontier/: MANIFEST.json  SCHEMA.md  train_hero_01.c2fb6646c61e8083.json
fixtures/nemo_rl/: openui_smoke.jsonl
fixtures/render/: sample_program.json
fixtures/rico/: README.md  semantic_train.jsonl  semantic_validation.jsonl
grammars/: openui.lark  openui_contract.json  openui_prop_order.json  toy_layout.lark
openwiki/: INSTRUCTIONS.md  quickstart.md  source-map.md
openwiki/architecture/: overview.md
openwiki/integrations/: surfaces.md
openwiki/operations/: checkpoints-and-agents.md
openwiki/testing/: guidance.md
openwiki/workflows/: train-eval-docs.md
scripts/: __init__.py  ablate_decode_scaffolding.py  allocate_mixed_precision.py  analyze_conditional_rate.py  analyze_grammar_arity.py  analyze_task_quotient.py  audit_corpus_diversity.py  audit_data_corpora.py  audit_edit_reachability.py  audit_experiment_firewall.py  audit_gold_scoring.py  audit_meaningful_program.py  audit_synthetic_integrity.py  audit_template_sufficiency.py  autoresearch.py  backfill_checkpoint_references.py  backfill_experiment_feature_flags.py  bench_accel.py  bench_cactus.py  bench_flow_caches.py  bench_telemetry.py  bootstrap_playground.py  build_cap5_02_manifest.py  build_constraint_backend_benchmark_manifest.py  build_decode_invariance_manifest.py  build_floor_gate_family_sweep.py  build_floor_gate_power_sweep.py  build_floor_gate_seed_stability.py  build_grammar_profile_manifest.py  build_legal_edit_bridges.py  build_pretrained_denoiser_activation_manifest.py  build_proxy_metric_calibration_manifest.py  build_scaffold_distillation_activation_manifest.py  build_semantic_contrasts.py  build_semantic_floor_gate.py  build_solver_supervision.py  build_spectral_atlas.py  build_teacher_paraphrase_activation_manifest.py  build_test_data.py  build_train_data.py  (+195 more)
src/gpu_multi_farm/: __init__.py  config.py  cost.py  models.py  registry.py  server.py
src/slm_training/: __init__.py  bridge_utils.py  levers.py  versioning.py
tests/: conftest.py  test_data_store.py  test_levers.py  test_lineage_interventions.py  test_lotus_fidelity_contract.py  test_runtime_trace.py
tests/e2e/: annotate_playground.spec.ts  dashboard.spec.ts
tests/test_accel/: test_accel.py  test_hf_jobs_accel.py
tests/test_autoresearch/: __init__.py  test_experiment_campaign.py  test_harness.py  test_lattice_recursive_sources.py  test_openfeature.py  test_program_matrices.py  test_program_matrix.py  test_run_insights.py  (+2 more)
(+2094 files in other folders)
