[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-training"
version = "0.1.0"
description = "Harnesses for placeholder OpenUI SLM experiments"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Tyler Kendrick" }]
dependencies = [
  "lark>=1.1,<2",
  # Required for Vercel / playground FastAPI entrypoint (api/index.py).
  "fastapi>=0.110,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.9,<1",
  "numpy>=1.26,<3",
  "httpx>=0.27,<1",
  "fastapi>=0.110,<1",
  "torch>=2.2,<2.6",
]
grammar = [
  "lark>=1.1",
]
# Required for TwoTower training / generation
torch = [
  "torch>=2.2,<2.6",
]
hf = [
  "transformers>=4.40,<5",
  "accelerate>=0.30,<2",
]
rico = [
  "datasets>=2.18,<4",
  "pillow>=10.0,<13",
]
mcp = [
  "fastmcp>=2.0,<3",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
]
web = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
]

[project.scripts]
build-train-data = "scripts.build_train_data:main"
build-test-data = "scripts.build_test_data:main"
migrate-checkpoint = "scripts.migrate_checkpoint:main"
train-model = "scripts.train_model:main"
evaluate-model = "scripts.evaluate_model:main"
evaluate-loss-suites = "scripts.evaluate_loss_suites:main"
collect-trajectories = "scripts.collect_trajectories:main"
train-preference = "scripts.train_preference:main"
export-cactus = "scripts.export_cactus:main"
bench-cactus = "scripts.bench_cactus:main"
remote-train = "scripts.remote_train:main"
multi-farm-mcp = "scripts.multi_farm_mcp:main"
serve-playground = "scripts.serve_playground:main"
bootstrap-playground = "scripts.bootstrap_playground:main"
export-annotations = "scripts.export_annotations:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["slm_training*", "gpu_multi_farm*", "scripts*"]

[tool.setuptools.package-data]
slm_training = ["evals/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.vercel]
# Playground FastAPI instance (see api/index.py). Required for Git-triggered
# Vercel builds; without this the project fails with FASTAPI_ENTRYPOINT_NOT_FOUND.
entrypoint = "api.index:app"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
