[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-training"
version = "0.1.0"
description = "Harnesses for placeholder OpenUI SLM experiments"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Tyler Kendrick" }]
dependencies = [
  "fastapi>=0.110,<1",
  "lark>=1.1,<2",
  "numpy>=1.26,<3",
  "onnxruntime>=1.18,<2",
  "pydantic>=2.7,<3",
  "vercel>=0.5,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.9,<1",
  "numpy>=1.26,<3",
  "httpx>=0.27,<1",
  "fastapi>=0.110,<1",
  "torch>=2.2,<2.6",
]
grammar = [
  "lark>=1.1",
]
# Required for TwoTower training / generation
torch = [
  "torch>=2.2,<2.6",
]
hf = [
  "transformers>=4.40,<5",
  "accelerate>=0.30,<2",
  "huggingface_hub>=0.30,<2",
  "datasets>=2.18,<4",
  "peft>=0.13,<1",
  "trl>=0.12,<1",
  "trackio>=0.1,<1",
  "optimum[onnxruntime]>=1.20,<2",
]
rico = [
  "datasets>=2.18,<4",
  "pillow>=10.0,<13",
]
mcp = [
  "fastmcp>=2.0,<3",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
]
research = [
  "huggingface_hub>=0.30,<2",
  "httpx>=0.27,<1",
  "openai>=2.0,<3",
  "trackio>=0.1,<1",
]
web = [
  "fastapi>=0.110,<1",
  "onnx>=1.16,<2",
  "onnxruntime>=1.18,<2",
  "uvicorn[standard]>=0.27,<1",
]

[project.scripts]
build-train-data = "scripts.build_train_data:main"
build-test-data = "scripts.build_test_data:main"
generate-progspecs = "scripts.generate_progspecs:main"
migrate-checkpoint = "scripts.migrate_checkpoint:main"
train-model = "scripts.train_model:main"
evaluate-model = "scripts.evaluate_model:main"
evaluate-loss-suites = "scripts.evaluate_loss_suites:main"
collect-trajectories = "scripts.collect_trajectories:main"
run-mixture-search = "scripts.run_mixture_search:main"
run-scaling-ladder = "scripts.run_scaling_ladder:main"
self-distill = "scripts.self_distill:main"
resume-climb = "scripts.resume_climb:main"
train-preference = "scripts.train_preference:main"
export-cactus = "scripts.export_cactus:main"
bench-cactus = "scripts.bench_cactus:main"
remote-train = "scripts.remote_train:main"
hf-jobs-train = "scripts.hf_jobs_train:main"
multi-farm-mcp = "scripts.multi_farm_mcp:main"
serve-playground = "scripts.serve_playground:main"
bootstrap-playground = "scripts.bootstrap_playground:main"
export-annotations = "scripts.export_annotations:main"
sync-checkpoints = "scripts.sync_checkpoints:main"
model-cycle = "scripts.model_cycle:main"
autoresearch = "scripts.autoresearch:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["slm_training*", "gpu_multi_farm*", "scripts*"]

[tool.setuptools.package-data]
slm_training = ["evals/*.json"]
"slm_training.web" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
addopts = "-m 'not training'"
markers = [
  "training: iterative model training or training smoke (explicit opt-in only)",
]

[tool.vercel]
# Playground FastAPI instance (see api/index.py). Required for Git-triggered
# Vercel builds; without this the project fails with FASTAPI_ENTRYPOINT_NOT_FOUND.
entrypoint = "api.index:app"

[tool.ruff]
# Vendored Hugging Face marketplace skills (refreshed via `hf skills update`).
# Keep lint focused on repo-owned Python under src/scripts/tests.
extend-exclude = [
  ".agents/skills/hf-*",
  ".agents/skills/huggingface-*",
  ".agents/skills/trl-training",
  ".agents/skills/train-sentence-transformers",
  ".agents/skills/transformers-js",
  ".agents/skills/headroom",
  ".agents/skills/caveman*",
  ".agents/skills/ponytail*",
  ".claude/skills/hf-*",
  ".claude/skills/huggingface-*",
  ".claude/skills/trl-training",
  ".claude/skills/train-sentence-transformers",
  ".claude/skills/transformers-js",
  ".claude/skills/headroom",
  ".claude/skills/caveman*",
  ".claude/skills/ponytail*",
  ".cursor/skills/hf-*",
  ".cursor/skills/huggingface-*",
  ".cursor/skills/trl-training",
  ".cursor/skills/train-sentence-transformers",
  ".cursor/skills/transformers-js",
  ".cursor/skills/headroom",
  ".cursor/skills/caveman*",
  ".cursor/skills/ponytail*",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
